projekti/kube/back-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-01-12T23:12:57Z"
  generation: 2
  labels:
    app: back
  name: back
  namespace: default
  resourceVersion: "5962"
  selfLink: /apis/apps/v1/namespaces/default/deployments/back
  uid: 11aca306-3591-11ea-8e55-42010aa60fc8
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: back
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: back
    spec:
      containers:
        - image: gcr.io/kubehube/back:v2
          imagePullPolicy: IfNotPresent
          name: back
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
    - lastTransitionTime: "2020-01-12T23:12:57Z"
      lastUpdateTime: "2020-01-12T23:13:01Z"
      message: ReplicaSet "back-5f4f74c559" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2020-01-12T23:13:24Z"
      lastUpdateTime: "2020-01-12T23:13:24Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
  observedGeneration: 2
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
