projekti/kube/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-01-12T23:14:36Z"
  generateName: back-
  labels:
    app: back
  name: back-67bnc
  namespace: default
  resourceVersion: "6217"
  selfLink: /api/v1/namespaces/default/services/back-67bnc
  uid: 4cf542c4-3591-11ea-8e55-42010aa60fc8
spec:
  clusterIP: 10.0.18.206
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 31346
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: back
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
