projekti/kube/front-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-01-12T23:13:07Z"
  generation: 2
  labels:
    app: front
  name: front
  namespace: default
  resourceVersion: "5924"
  selfLink: /apis/apps/v1/namespaces/default/deployments/front
  uid: 1824f00b-3591-11ea-8e55-42010aa60fc8
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: front
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front
    spec:
      containers:
        - image: gcr.io/kubehube/front:v2
          imagePullPolicy: IfNotPresent
          name: front
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
    - lastTransitionTime: "2020-01-12T23:13:08Z"
      lastUpdateTime: "2020-01-12T23:13:11Z"
      message: ReplicaSet "front-5f54c6ff49" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2020-01-12T23:13:19Z"
      lastUpdateTime: "2020-01-12T23:13:19Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
  observedGeneration: 2
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
